<?xml version="1.0" encoding="utf-8"?>
<com.m4coding.coolhub.widgets.MultiStateView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/business_mainpage_user_details_info_state_view"
    app:msv_errorView="@layout/layout_load_error"
    app:msv_loadingView="@layout/layout_loading"
    app:msv_viewState="loading"
    tools:msv_viewState="content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_f5f5f5"
        android:id="@+id/business_mainpage_user_details_info_scroll_view">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_10"
            android:layout_marginRight="@dimen/px_10"
            android:layout_marginTop="@dimen/px_10"
            android:foreground="@drawable/selector_click_effect"
            app:cardCornerRadius="@dimen/px_12"
            app:cardElevation="@dimen/px_3"
            app:cardUseCompatPadding="true">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/px_20"
                android:paddingBottom="@dimen/px_20">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/business_mainpage_user_details_info_tv_location"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/px_text_30"
                    android:layout_marginLeft="@dimen/px_30"
                    android:layout_marginStart="@dimen/px_30"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="地区：广州" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/business_mainpage_user_details_info_tv_email"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/px_text_30"
                    android:layout_marginTop="@dimen/px_20"
                    app:layout_goneMarginTop="0dp"
                    android:layout_marginLeft="@dimen/px_30"
                    android:layout_marginStart="@dimen/px_30"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/business_mainpage_user_details_info_tv_location"
                    tools:text="邮箱：xxxxxxx"/>

                <LinearLayout
                    android:layout_width="@dimen/px_120"
                    android:layout_height="@dimen/px_120"
                    android:orientation="vertical"
                    android:id="@+id/business_mainpage_user_details_info_ll_repositories"
                    android:layout_marginTop="@dimen/px_50"
                    android:gravity="center"
                    android:background="@drawable/selector_click_effect"
                    app:layout_constraintTop_toBottomOf="@id/business_mainpage_user_details_info_tv_email"
                    app:layout_constraintEnd_toStartOf="@id/business_mainpage_user_details_info_ll_followers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/business_mainpage_user_details_info_tv_repositories"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/px_text_30"
                        android:gravity="center"
                        tools:text="1000万"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/px_text_30"
                        android:layout_marginTop="@dimen/px_10"
                        android:gravity="center"
                        android:text="@string/business_mainpage_repositories"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/px_120"
                    android:layout_height="@dimen/px_120"
                    android:orientation="vertical"
                    android:background="@drawable/selector_click_effect"
                    android:id="@+id/business_mainpage_user_details_info_ll_followers"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="@id/business_mainpage_user_details_info_ll_repositories"
                    app:layout_constraintBottom_toBottomOf="@id/business_mainpage_user_details_info_ll_repositories"
                    app:layout_constraintStart_toEndOf="@id/business_mainpage_user_details_info_ll_repositories"
                    app:layout_constraintEnd_toStartOf="@id/business_mainpage_user_details_info_ll_following">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/business_mainpage_user_details_info_tv_followers"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/px_text_30"
                        android:gravity="center"
                        tools:text="1000"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/px_text_30"
                        android:layout_marginTop="@dimen/px_10"
                        android:gravity="center"
                        android:text="@string/business_mainpage_followers"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/px_120"
                    android:layout_height="@dimen/px_120"
                    android:orientation="vertical"
                    android:id="@+id/business_mainpage_user_details_info_ll_following"
                    android:gravity="center"
                    android:background="@drawable/selector_click_effect"
                    app:layout_constraintTop_toTopOf="@id/business_mainpage_user_details_info_ll_followers"
                    app:layout_constraintBottom_toBottomOf="@id/business_mainpage_user_details_info_ll_followers"
                    app:layout_constraintStart_toEndOf="@id/business_mainpage_user_details_info_ll_followers"
                    app:layout_constraintEnd_toEndOf="parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/business_mainpage_user_details_info_tv_following"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/px_text_30"
                        android:gravity="center"
                        tools:text="1000"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/px_text_30"
                        android:layout_marginTop="@dimen/px_10"
                        android:gravity="center"
                        android:text="@string/business_mainpage_following"/>
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</com.m4coding.coolhub.widgets.MultiStateView>